Fix toggle arrow alignment for entry widgets

--- a/src/resources/src/scss/workflow.scss
+++ b/src/resources/src/scss/workflow.scss
@@ -73,7 +73,6 @@
     &:before {
         left: auto !important;
         right: 0;
-        top: 0;
     }
 }
 
